# frontrowcrew

./: .gitignore  .stylelintignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml
.ansible/: ansible.cfg  deploy.yml  requirements.yml  ssh_config.j2  ssh_config.yml
.devcontainer/: .sqliterc  Dockerfile  devcontainer.json  docker-compose.yml  frontend.Dockerfile
.github/: dependabot.yml
.github/linters/: .sql-config.json  .stylelintrc.json
.github/workflows/: deploy.yml  lint.yml  test.yml
assets/js/: main.js
assets/sass/: _breakpoints.scss  _buttons.scss  _cards.scss  _compatibility.scss  _embeds.scss  _fonts.scss  _headings.scss  _mixins.scss  _pagination.scss  _sections.scss  content_details.scss  footer.scss  header.scss  homepage.scss  main.scss  search_results.scss  show_details.scss  vendor_import.scss
betafrontrowcrew/: asgi.py  celery.py  settings.py  urls.py  utils.py  wsgi.py
betafrontrowcrew/tests/: utils.py
betafrontrowcrew/utils/: __init__.py  sites.py
creator/: admin.py  factories.py  forms.py  models.py  urls.py  utils.py  views.py
creator/migrations/: 0001_initial.py
creator/tasks/: __init__.py  chapters.py  id3.py  publish.py  sort_chapters.py  upload.py
creator/tests/: test_create.py  test_factories.py  test_tasks.py  test_upload.py
embeds/: admin.py  apps.py  models.py
embeds/migrations/: 0001_initial.py  0002_add_youtube_service.py  0003_alter_media_options.py
etl/: README.md  admin.py  factories.py  models.py  utils.py
etl/data/: community.csv  content_length.db  forum.db  mkforumdb.py  oldforum.csv
etl/migrations/: 0001_add_import_record.py  0002_alter_importrecord_options.py
etl/py_steps/: __init__.py  forum_link_fill_in.py  podcast_enclosure_lengths.py  podcasts_create.py  set_site_domain.py  video_thumbnails.py
etl/sql_steps/: 00_clean_sqlite_db.sql  01_fdw_create.sql  02_shows_create.sql  03_flatpage.sql  04_tags.sql  05_news.sql  06_bookclub.sql  07_videos.sql  08_geeknights.sql  09_totd.sql  10_tag_content.sql  10_tag_items.sql  11_bookclub_relations.sql  12_forum_threads.sql  13_fdw_drop.sql
frontrowcrew/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
frontrowcrew/tests/: utils.py
frontrowcrew/utils/: __init__.py  db.py  forms.py  sites.py  tasks.py
homepage/: tests.py  views.py
legacy_redirects/: apps.py  url_converters.py  urls.py  views.py
legacy_redirects/tests/: test_redirects.py
media/: admin.py  factories.py  ftp.py  id3.py  models.py  tasks.py  xmp.py
media/migrations/: 0001_initial.py  0002_alter_ftpdestination_url_prefix.py  0002_ftpdestination_alter_mp3_options.py
media/tests/: test_destination.py  test_factories.py  test_mp3.py
podcasts/: admin.py  factories.py  feedgenerator.py  feeds.py  models.py  urls.py  utils.py
podcasts/data/: backup.py  itunes.py
podcasts/migrations/: 0001_initial.py  0002_populate_itunes_category.py  0003_add_podcasts_to_show_models.py  0004_remove_unique_enclosure_url.py  0005_add_custom_feed_url_and_episode_image.py  0006_add_chapter_url_image_descriptions.py  0007_alter_podcastepisode_guid.py  0008_podcast_itunes_image_dimensions_nullable.py  0009_allow_blank_fields.py
podcasts/tests/: test_factories.py  test_feeds.py  test_utils.py  utils.py
shows/: admin.py  apps.py  context_processors.py  custom_context_processors.py  factories.py  feeds.py  managers.py  models.py  signals.py  tests.py  urls.py  views.py
shows/migrations/: 0001_initial.py  0002_alter_show_slug_content.py  0003_rename_published_content_is_published_and_more.py  0004_show_display_in_nav.py  0005_add_podcasts_to_content_models.py  0006_add_sub_show_m2m.py  0007_change_show_podcast_to_one_to_one.py  0008_add_related_link.py  0009_create_thing_of_the_day_type.py  0010_add_tags_to_content.py  0011_add_content_search_vector.py  0012_add_search_index.py  0013_alter_content_options_alter_show_options_and_more.py  0014_create_forum_thread_type.py  0015_add_more_related_link_types.py  0016_add_image_to_content.py  0017_add_content_metadata.py  0018_add_related_content_m2m.py  0019_add_fields_to_type_models.py  0020_populate_type_model_fields.py  0021_add_unique_to_type_models.py  (+13 more)
static/css/: main.css  (+10 more)
syndicators/: admin.py  apps.py  tasks.py
templates/: 404.html  base.html  footer.html  header.html  manifest.webmanifest
(+139 files in other folders)
