[project]
authors = [
    {name = "Scott Rubin", email = "apreche@frontrowcrew.com"},
]
requires-python = "<3.14,>=3.11"
dependencies = [
    "Django<5.0,>=4.0",
    "django-extensions<4.0.0,>=3.1.5",
    "celery<6.0.0,>=5.4.0",
    "gunicorn<24.0.0,>=23.0.0",
    "Pillow<11.0.0,>=10.0.0",
    "docutils<1.0,>=0.21",
    "psycopg2<3.0.0,>=2.9.10",
    "pylibmc<2.0.0,>=1.6.1",
    "django-storages<2.0.0,>=1.12.3",
    "django-celery-results<3.0.0,>=2.2.0",
    "factory-boy<4.0.0,>=3.2.1",
    "Markdown<4.0.0,>=3.3.6",
    "mdgen<1.0.0,>=0.1.9",
    "boto3<2.0.0,>=1.35.49",
    "django-taggit<7.0.0,>=6.1.0",
    "django-readonly-field<2.0.0,>=1.1.1",
    "mutagen<2.0.0,>=1.45.1",
    "python-xmp-toolkit<3.0.0,>=2.0.1",
    "django-pagedown<3.0.0,>=2.2.1",
    "django-crispy-forms<3.0,>=2.3",
    "crispy-bootstrap5<2025.0,>=2024.10",
    "python-magic<1.0.0,>=0.4.27",
    "django-celery-beat<3.0.0,>=2.7.0",
    "requests<3.0.0,>=2.28.2",
    "tqdm<5.0.0,>=4.64.1",
    "flower<3.0.0,>=2.0.0",
    "django-model-utils<5.0.0,>=4.3.1",
    "atproto<1.0.0,>=0.0.55",
]
name = "frontrowcrew"
version = "0.1.0"
description = ""

[dependency-groups]
test = [
    "tblib<4.0.0,>=3.0.0",
]
dev = [
    "coverage<8.0.0,>=7.6.4",
    "django-debug-toolbar<5.0.0,>=4.0.0",
    "ipdb<1.0.0,>=0.13.9",
    "ipython<9.0.0,>=8.29.0",
    "pgcli<5.0.0,>=4.0.0",
    "setuptools<76.0.0,>=75.2.0",
    "Werkzeug<4.0.0,>=3.0.6",
]
